@@ -122,18 +122,19 @@ public class MessageListFragment extends ListFragment implements MessageDataCons
 			if (loadAnimationDone == false) {
 				loadAnimationDone = true;
 
+				// hide the progressbar
 				mProgressBar.setVisibility(View.INVISIBLE);
 
-				// Make some hidden views visible and do some animation
-				if(null != getActivity().getBaseContext()){
+				// Make some hidden views visible with some animation
+				if (null != getActivity().getBaseContext()) {
 					Animation slideInAnimation = AnimationUtils.loadAnimation(getActivity().getBaseContext(),
 							R.animator.slide_in_top);
 					// add a small delay before starting the animation
 					slideInAnimation.setStartOffset(500);
-					messageInfoLyout.setVisibility(View.VISIBLE);
-					pageTitleText.setVisibility(View.VISIBLE);
 					messageInfoLyout.startAnimation(slideInAnimation);
 				}
+				messageInfoLyout.setVisibility(View.VISIBLE);
+				pageTitleText.setVisibility(View.VISIBLE);
 			}
 		}
 	}
